sandbox/output
Patient.java:28: error: method getStartDate in class Patient cannot be applied to given types;
        LocalDate startA = getStartDate(medicine, daysBeforeToday);
                           ^
  required: Medicine
  found: Medicine,long
  reason: actual and formal argument lists differ in length
Patient.java:29: error: method getEndDate in class Patient cannot be applied to given types;
        LocalDate endA = getEndDate(medicine, daysBeforeToday);
                         ^
  required: Medicine
  found: Medicine,long
  reason: actual and formal argument lists differ in length
Patient.java:30: error: method getStartDate in class Patient cannot be applied to given types;
        LocalDate startB = getStartDate(clashingMedicine, daysBeforeToday);
                           ^
  required: Medicine
  found: Medicine,long
  reason: actual and formal argument lists differ in length
Patient.java:31: error: method getEndDate in class Patient cannot be applied to given types;
        LocalDate endB = getEndDate(clashingMedicine, daysBeforeToday);
                         ^
  required: Medicine
  found: Medicine,long
  reason: actual and formal argument lists differ in length
4 errors
